--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- }
-
+}
 
 /*
  * Base structure
  */
 
-body {}
+
 
 /*
  * Header
@@ -58,4 +57,8 @@ body {}
   color: #fff;
   border-bottom-color: #fff;
 }
-
+.scrolling {
+  background: black;
+  opacity: 90%;
+  transition: all 0.5s;
+}
